events on homepage limited

--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -66,7 +66,8 @@
             </div>
 
 
-            <h3>Watershed UGA Events</h3>
+            <h3>Watershed UGA Events This Week</h3>
+            <a class="" href="{{ path('event') }}">All Upcoming Events</a>
             {% for event in events %}
                 <div class="panel panel-default">
                     <div class="panel-heading">
