--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -82,7 +82,7 @@
                 </div>
             {% else %}
                 <div class="panel-body">
-                    <p>There are currently no events. Please check back soon.</p>
+                    <p>There are no events this week. Please check back soon.</p>
                 </div>
             {% endfor %}
 
