--- a/src/Sustain/AppBundle/Resources/public/css/local.css
+++ b/src/Sustain/AppBundle/Resources/public/css/local.css
@@ -105,6 +105,9 @@ form {
     cursor: pointer;
 }
 
+.col-sm-10 .well {
+    height: 90vh;
+}
 
 /**********  Google search display *******/
 
@@ -150,4 +153,31 @@ input.gsc-search-button, input.gsc-search-button:hover, input.gsc-search-button:
     width: auto;
     height: auto;
     margin-bottom: -10px;
+}
+
+
+/********** Media Queries **********/
+
+@media (max-width: 1199px) {
+    .navbar .nav > li > a {
+        padding-left: 7px;
+        padding-right: 7px;
+    }
+}
+
+@media (max-width: 920px) {
+    .navbar .nav > li > a {
+        padding-left: 3px;
+        padding-right: 3px;
+        font-size: smaller;
+    }
+}
+
+
+@media (max-width: 800px) {
+    .navbar .nav > li > a {
+        padding-left: 2px;
+        padding-right: 2px;
+        font-size: smaller;
+    }
 }
