--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -51,6 +51,14 @@
             <div class="embed-responsive embed-responsive-4by3">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mZvlSWSNsJw?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
+
+            <h3>Take a Survey</h3>
+
+
+            <div class="embed-responsive embed-responsive-4by3">
+                <a href="http://www.watershed.uga.edu/page/13" title="Take a survey"><img alt="Take a survey" src="http://www.watershed.uga.edu/images/survey.png"></a>
+            </div>
+
         </div>
 
         <div class="col-sm-4">
