responsive img on homepage and vh for page only

--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -55,8 +55,8 @@
             <h3>Take a Survey</h3>
 
 
-            <div class="embed-responsive embed-responsive-4by3">
-                <a href="http://www.watershed.uga.edu/page/13" title="Take a survey"><img alt="Take a survey" src="http://www.watershed.uga.edu/images/survey.png"></a>
+            <div>
+                <a href="http://www.watershed.uga.edu/page/13" title="Take a survey"><img class="img-responsive" alt="Take a survey" src="http://www.watershed.uga.edu/images/survey.png"></a>
             </div>
 
         </div>
