additions to profile

--- a/src/Sustain/AppBundle/Resources/public/css/local.css
+++ b/src/Sustain/AppBundle/Resources/public/css/local.css
@@ -105,6 +105,10 @@ form {
     cursor: pointer;
 }
 
+form div div  {
+    margin-bottom: 25px;
+}
+
 
 /**********  Google search display *******/
 
