--- a/src/Sustain/AppBundle/Resources/views/Module/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Module/show.html.twig
@@ -16,6 +16,7 @@
                                 {{ tag.name }}
                                 </span>
         {% endfor %}
+        <div style="margin-top: 10px">{{ entity.description|raw }}</div>
         <hr/>
 
         <h2>Core Resources</h2>
