--- a/src/Sustain/UserBundle/Resources/views/User/show.html.twig
+++ b/src/Sustain/UserBundle/Resources/views/User/show.html.twig
@@ -18,7 +18,7 @@
         {{ entity.email }}
         <h3>Bio</h3>
         {{ entity.bio|raw }}
-        <h3>School/College</h3>
+        <h3>School/College/Unit</h3>
         {{ entity.college|raw }}
         <h3>Research</h3>
         {{ entity.research|raw }}
