--- a/src/Sustain/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Sustain/UserBundle/Resources/views/User/index.html.twig
@@ -16,7 +16,7 @@
         <thead>
             <tr>
                 <th>Name</th>
-                <th>School/College</th>
+                <th>School/College/Unit</th>
                 <th>Research</th>
             </tr>
         </thead>
