--- a/src/Sustain/AppBundle/Resources/views/Mapset/show.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Mapset/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript" src="{{ asset('bundles/app/js/jquery.ui.map.full.min.js') }}"></script>
 
     <script language="javascript">
