--- a/src/Sustain/AuthenticateBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AuthenticateBundle/Resources/views/layout.html.twig
@@ -18,7 +18,7 @@
     {% endblock %}
 </head>
 <body>
-<div class="col-sm-12">
+<div class="col-sm-12 full" style="height: 100vh">
 
     <script language="javascript">
         $(document).ready(function()
@@ -33,14 +33,13 @@
         });
     </script>
 
-    <div class="col-sm-offset-4 col-sm-4 col-xs-12">
+    <div class="col-sm-offset-4 col-sm-4 col-xs-12 ">
         <div class="panel panel-default" style="margin-top: 30px;">
             <div class="panel-body">
                 <div style="text-align:center;">
                     <h1 class="margin-top-small">{{ application_name }}.</h1>
                     <p>Please use your UGA MyId and Password to login.</p>
 
-                    <img alt="generic user icon" class="img-circle" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png"/>
                     {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                         {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }}
                         <a href="{{ path('fos_user_security_logout') }}">
@@ -61,7 +60,7 @@
                 </div>
             </div>
         </div>
-        <div style="text-align:center;margin-bottom:20px;">
+        <div class="well" style="text-align:center;margin-bottom:20px;">
             {% if not is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 <a href="{{ path('fos_user_resetting_request') }}">Forgot Password?</a>
             {% endif %}
