UI tweaks and page index on events

--- a/src/Sustain/AppBundle/Resources/public/css/local.css
+++ b/src/Sustain/AppBundle/Resources/public/css/local.css
@@ -105,6 +105,10 @@ form div div  {
     border: 1px solid #dddddd;
 }
 
+.bold {
+    font-weight: bold;
+}
+
 
 /**********  Google search display *******/
 
