--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -35,12 +35,13 @@
             {% for page in pages %}
                 <a href="{{ path('page_show', {id:page.id}) }}" title="Read more about {{ page.menuName }} ">
                     <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail" alt="{{ page.menuName }}">
-
+                </a>
                     <div class="caption">
-                        <h3>{{ page.teaserImageCaption }}</h3>
-
+                            <h3>{{ page.teaserImageCaption }}</h3>
                         <p>{{ page.teaser|raw }}</p>
                     </div>
+                <a href="{{ path('page_show', {id:page.id}) }}" title="Read more about {{ page.menuName }} ">
+                    Read more about {{ page.teaserImageCaption }}
                 </a>
             {% endfor %}
         </div>
