--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -17,6 +17,7 @@
             <li><a href="{{ path('opportunity', {'type': 'service'}) }}">Partners</a></li>
             <li><a href="{{ path('opportunity', {'type': 'intern'} ) }}">Internships</a></li>
             <li><a href="{{ path('page_show', { 'id': 10 }) }}">Service Learning</a></li>
+            <li><a href="{{ path('page_stories') }}">Stories</a></li>
         </ul>
     {% endif %}
 
