--- a/src/Sustain/AppBundle/Resources/views/layout.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/layout.html.twig
@@ -11,7 +11,7 @@
 
 {% block sidebar %}
     {% if 'event' in app.request.attributes.get('_route') or 'opportunity' in app.request.attributes.get('_route') or 'page' in app.request.attributes.get
-    ('_route') %}
+    ('_route')  %}
         <ul class="nav nav-sidebar list-unstyled" style="margin-top: 20px;">
             <li><a href="{{ path('event') }}">Events</a></li>
             <li><a href="{{ path('opportunity', {'type': 'service'}) }}">Partners</a></li>
@@ -21,26 +21,30 @@
         </ul>
     {% endif %}
 
-    {% if tags is defined %}
+    {% if categories is defined %}
         <h2 style="font-size: medium">Labels</h2>
-        {% for tag in tags %}
-            {% if 'file' in app.request.attributes.get('_route') %}
-                <a href="{{ path('files_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right" style="background-color: {{ tag.color }};
-                            ">{{ tag.name }}</span></a>
-            {% elseif 'module' in app.request.attributes.get('_route') %}
-                <a href="{{ path('modules_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right" style="background-color: {{ tag.color }};
-                            ">{{ tag.name }}</span></a>
-            {% elseif 'objective' in app.request.attributes.get('_route') %}
-                <a href="{{ path('objectives_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right"
-                                                                                 style="background-color: {{ tag.color }};
-                                                                                         ">{{ tag.name }}</span></a>
-            {% elseif 'activity' in app.request.attributes.get('_route') %}
-                <a href="{{ path('activity_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right"
-                                                                               style="background-color: {{ tag.color }};
-                                                                                       ">{{ tag.name }}</span></a>
-            {% else %}
-                <span class="label label-default margin-right" style="background-color: {{ tag.color }};">{{ tag.name }}</span>
-            {% endif %}
+        {% for category in categories %}
+            {{ category.name }}
+            {% for tag in category.tags %}
+                {% if 'file' in app.request.attributes.get('_route') %}
+                    <a href="{{ path('files_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right" style="background-color: {{ tag.color }};
+                                ">{{ tag.name }}</span></a>
+                {% elseif 'module' in app.request.attributes.get('_route') %}
+                    <a href="{{ path('modules_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right" style="background-color: {{ tag.color }};
+                                ">{{ tag.name }}</span></a>
+                {% elseif 'objective' in app.request.attributes.get('_route') %}
+                    <a href="{{ path('objectives_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right"
+                                                                                     style="background-color: {{ tag.color }};
+                                                                                             ">{{ tag.name }}</span></a>
+                {% elseif 'activity' in app.request.attributes.get('_route') %}
+                    <a href="{{ path('activity_by_tag', {'tag': tag.id}) }}"><span class="label label-default margin-right"
+                                                                                   style="background-color: {{ tag.color }};
+                                                                                           ">{{ tag.name }}</span></a>
+                {% else %}
+                    <span class="label label-default margin-right" style="background-color: {{ tag.color }};">{{ tag.name }}</span>
+                {% endif %}
+            {% endfor %}
+            <hr/>
         {% endfor %}
     {% endif %}
 
@@ -50,6 +54,8 @@
             <li>Labels</li>
             <li><a href="{{ path('tag') }}"> List Labels</a></li>
             <li><a href="{{ path('tag_new') }}">New Label</a></li>
+            <li><a href="{{ path('category') }}"> List Categories</a></li>
+            <li><a href="{{ path('category_new') }}">New Category</a></li>
             <li>Pages</li>
             <li><a href="{{ path('section') }}"> List Sections</a></li>
             <li><a href="{{ path('section_new') }}">New Section</a></li>
