--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -2,31 +2,27 @@
 
 {% block body -%}
 
-    <div class="" style="background-color: #82D3EE; margin-top: -20px;margin-left: -15px; margin-right: -15px; padding:30px; padding-right:300px;
-    padding-left:0;padding-bottom:0;">
-        <img src="{{ asset('bundles/app/images/banner_home.png') }}" class="img-responsive" alt="Watershed UGA logo">
-    </div>
-    <div class="col-sm-12 well" style="margin-top:20px; padding:30px;background-color: #dedede; ">
-        <div class="col-sm-4">
+    <div class="row">
+        <div class="col-sm-12 " style="background-color: #82D3EE; margin-top: -20px;  padding:10px;">
+            <div class="panel panel-default col-sm-4 pull-right" style="margin-top:15px;">
+                <div class="panel-body">
+                    <strong>Join our mailing list!</strong>
+                    <p>Please send your name and email to <strong>watershed@uga.edu</strong> to get email updates on Watershed UGA. Please note if you are a
+                        student,
+                        a member of the community, or a faculty member in the email. </p>
+                </div>
+            </div>
+            <img src="{{ asset('bundles/app/images/banner_home.png') }}" class="img-responsive" alt="Watershed UGA logo" style="max-height: 160px;">
+
+        </div>
+        <div class="col-sm-12 " style="padding: 15px; background-color: white; border: solid 1px #e7e7e7 ">
             <strong>What is Watershed UGA?</strong>
             A town & gown initiative to involve UGA campus and Athens community in restoring our streams. We are transforming these streams into a living
             laboratory through teaching, research, and service.
-
         </div>
-        <div class="col-sm-4">
-            <strong>Goal of Watershed UGA</strong>
-            To exponentially increase campus and community awareness of and involvement in stream restoration, while building social infrastructure to tackle
-            other sustainability issues, such as clean energy production, through the three land-grant missions.
-
-        </div>
-        <div class="col-sm-4">
-            <strong>Mission of Watershed UGA</strong>
-            To restore the health of tributary streams to the Oconee River – our main water source – with the involvement of all those interested in helping.
-            To find out more, explore resources, or contribute, enter our site.
-        </div>
-
-
     </div>
+
+
     <div class="col-sm-12 " style="padding:30px;">
 
 
@@ -36,10 +32,11 @@
                 <a href="{{ path('page_show', {id:page.id}) }}" title="Read more about {{ page.menuName }} ">
                     <img src="{{ page.teaserImage }}" class="img-responsive img-thumbnail" alt="{{ page.menuName }}">
                 </a>
-                    <div class="caption">
-                            <h3>{{ page.teaserImageCaption }}</h3>
-                        <p>{{ page.teaser|raw }}</p>
-                    </div>
+                <div class="caption">
+                    <h3>{{ page.teaserImageCaption }}</h3>
+
+                    <p>{{ page.teaser|raw }}</p>
+                </div>
                 <a href="{{ path('page_show', {id:page.id}) }}" title="Read more about {{ page.menuName }} ">
                     Read more about {{ page.teaserImageCaption }}
                 </a>
@@ -63,18 +60,6 @@
         </div>
 
         <div class="col-sm-4">
-            <h3>Join our mailing list!</h3>
-
-            <div class="panel panel-default">
-                <div class="panel-heading"></div>
-                <div class="panel-body">
-                    <p>Please send your name and email to <strong>watershed@uga.edu</strong> to get email updates on Watershed UGA. Please note if you are a
-                        student,
-                        a member of the community, or a faculty member in the email. </p>
-                </div>
-            </div>
-
-
             <h3>Watershed UGA Events This Week</h3>
             <a class="" href="{{ path('event') }}">All Upcoming Events</a>
             {% for event in events %}
