--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -7,6 +7,7 @@
             <div class="panel panel-default col-sm-4 pull-right" style="margin-top:15px;">
                 <div class="panel-body">
                     <strong>Join our mailing list!</strong>
+
                     <p>Please send your name and email to <strong>watershed@uga.edu</strong> to get email updates on Watershed UGA. Please note if you are a
                         student,
                         a member of the community, or a faculty member in the email. </p>
@@ -24,7 +25,6 @@
 
 
     <div class="col-sm-12 " style="padding:30px;">
-
 
         <div class="col-sm-4">
             <h3>Watershed Stories</h3>
@@ -48,13 +48,6 @@
 
             <div class="embed-responsive embed-responsive-4by3">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mZvlSWSNsJw?rel=0" frameborder="0" allowfullscreen></iframe>
-            </div>
-
-            <h3>Take a Survey</h3>
-
-
-            <div>
-                <a href="http://www.watershed.uga.edu/page/13" title="Take a survey"><img class="img-responsive" alt="Take a survey" src="http://www.watershed.uga.edu/images/survey.png"></a>
             </div>
 
         </div>
@@ -81,6 +74,11 @@
             {% endfor %}
 
 
+            <h3>Take a Survey</h3>
+
+            <div class="well">
+                <a href="http://www.watershed.uga.edu/page/13" title="Take a survey"><img class="img-responsive" alt="Take a survey" src="http://www.watershed.uga.edu/images/survey.png"></a>
+            </div>
         </div>
 
     </div>
