twitter stream on homepage

--- a/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Page/home.html.twig
@@ -43,6 +43,7 @@
             {% endfor %}
         </div>
         <div class="col-sm-4">
+
             <h3>Watch our Introductory Video</h3>
 
 
@@ -50,9 +51,19 @@
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mZvlSWSNsJw?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
 
+            <h3>Take a Survey</h3>
+
+            <div class="well">
+                <a href="http://www.watershed.uga.edu/page/13" title="Take a survey"><img class="img-responsive" alt="Take a survey" src="http://www.watershed.uga.edu/images/survey.png"></a>
+            </div>
+
         </div>
 
         <div class="col-sm-4">
+
+            <a class="twitter-timeline" href="https://twitter.com/WatershedUGA" data-widget-id="644610687554162689">Tweets by @WatershedUGA</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
             <h3>Watershed UGA Events This Week</h3>
             <a class="" href="{{ path('event') }}">All Upcoming Events</a>
             {% for event in events %}
@@ -74,11 +85,7 @@
             {% endfor %}
 
 
-            <h3>Take a Survey</h3>
 
-            <div class="well">
-                <a href="http://www.watershed.uga.edu/page/13" title="Take a survey"><img class="img-responsive" alt="Take a survey" src="http://www.watershed.uga.edu/images/survey.png"></a>
-            </div>
         </div>
 
     </div>
