--- a/src/Sustain/AppBundle/Resources/views/Event/index.html.twig
+++ b/src/Sustain/AppBundle/Resources/views/Event/index.html.twig
@@ -24,7 +24,10 @@
                     {{ entity.title }}
                 </h2>
 
-                <p>{% if entity.start %}{{ entity.start|date("l, F d") }} {{ entity.start|date("g:i A") }}{% endif %}</p>
+                <p>{% if entity.start %}{{ entity.start|date("l, F d") }}
+                    {% if entity.start|date("g:i A") == "12:00 AM" %}{% else %}{{ entity.start|date("g:i A") }}{% endif %}
+                    {% endif %}
+                </p>
 
                 <p>
                     {{ entity.teaser|raw }}
